# aind-data-upload

./: README.md  pyproject.toml
.github/workflows/: tag_and_publish.yml
doc_template/source/: conf.py
scripts/: singularity_build.def
src/aind_data_upload/: check_directories_job.py
tests/: test_check_directories_job.py
